--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -54,28 +54,38 @@
 <option value="29">- その他</option>
 </optgroup>
 <optgroup label="習い事">
-<option value="27">- 音楽</option>
-<option value="28">- 料理</option>
-<option value="29">- スポーツ</option>
-<option value="30">- フィットネス</option>
-<option value="31">- 語学</option>
-<option value="32">- 特技</option>
-<option value="33">- 学習</option>
-<option value="34">- その他</option>
+<option value="30">- 楽器演奏</option>
+<option value="31">- ボイストレーニング</option>
+<option value="32">- ダンス</option>
+<option value="33">- 絵画教室</option>
+<option value="34">- アロマ教室</option>
+<option value="35">- 身体作り</option>
+<option value="36">- スポーツ</option>
+<option value="37">- 語学</option>
+<option value="38">- 学習</option>
+<option value="39">- 料理</option>
+<option value="40">- フラワーアレンジメント</option>
+<option value="41">- その他</option>
 </optgroup>
 <optgroup label="健康">
-<option value="35">- カウンセリング</option>
-<option value="36">- エクササイズ</option>
-<option value="37">- ヒーリング</option>
-<option value="38">- コーチング</option>
-<option value="39">- マッサージ・エステ</option>
-<option value="40">- パーソナルシェフ</option>
-<option value="41">- その他</option>
+
+<option value="42">- カウンセリング</option>
+<option value="43">- エクササイズ</option>
+<option value="44">- ヒーリング</option>
+<option value="45">- コーチング</option>
+<option value="46">- マッサージ</option>
+<option value="47">- エステ</option>
+<option value="48">- パーソナルシェフ</option>
+<option value="49">- デンタルケア</option>
+<option value="50">- パーソナルトレーニング</option>
+<option value="51">- アロマセラピー</option>
+<option value="52">- 介護ヘルパー</option>
+<option value="53">- その他</option>
  </optgroup>
 <option value="5"> その他</option></select>
 
 </select>
- 
+
 
  <%= f.fields_for :note_revisions do |b| %>
        
