--- a/app/views/notes/health.html.erb
+++ b/app/views/notes/health.html.erb
@@ -56,7 +56,7 @@
     </div>
 
      <div class="store_name_left">
-     <p><%= link_to note.provider.name,profile_note_path(note) %></p>
+     <p><%= link_to note.provider.name,profile_note_path(note) ,:class => "link_provider"%></p>
      </div>
        <div class="service-price"><h3> <%= note_revision.price %>円<span>(税込)</span>〜</h3> </div>
        <% end %>
