--- a/app/views/layouts/top_home.html
+++ b/app/views/layouts/top_home.html
@@ -2,8 +2,8 @@
 <head>
 
 <title>Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！</title>  
-<meta name=”description” content=”ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]” />
-<meta name=”keywords” content=”業者,ポートフォリオ撮影,マッサージ,リフォーム” />
+<meta name="description" content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]" />
+<meta name="keywords" content="業者,ポートフォリオ撮影,マッサージ,リフォーム"/>
 <meta property="og:title" content="Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！" />
 <meta property="og:description"
      content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]" />
