--- a/app/views/notes/profile.html
+++ b/app/views/notes/profile.html
@@ -36,7 +36,7 @@
 
     <tr>
     <th>所在地：</th>
-      <td><%= @note.provider.address %></td>
+      <td><%= s.prefecture %></td>
     </tr>
     
     <tr>
