--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -33,11 +33,11 @@
   <div class="wrapper">
    <nav id="scroll-menu">
     <ul class="scroll-menu-inner">
-    <li><a href="/category/housing"><i class="fa fa-home fa-fw"></i>住まい</a></li>
-    <li><a href="/category/event"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
-    <li><a href="/category/lesson"><i class="fa fa-book fa-fw"></i>習い事</a></li>
-    <li><a href="/category/health"><i class="fa fa-heart fa-fw"></i>健康</a></li>
-    <li><a href="/category/others"><i class="fa fa-list-ul fa-fw"></i>その他</a></li>
+    <li><a href="/category/housing?category=住まい"><i class="fa fa-home fa-fw"></i>住まい</a></li>
+    <li><a href="/category/event/?category=イベント"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
+    <li><a href="/category/lesson/?category=習い事"><i class="fa fa-book fa-fw"></i>習い事</a></li>
+    <li><a href="/category/health/?category=健康"><i class="fa fa-heart fa-fw"></i>健康</a></li>
+    <li><a href="/category/others/?category=その他"><i class="fa fa-list-ul fa-fw"></i>その他</a></li>
   </ul>
 </nav>
 </div>
