--- a/app/views/providers/profile.html.erb
+++ b/app/views/providers/profile.html.erb
@@ -31,7 +31,7 @@
 
     <tr>
     <th>所在地：</th>
-      <td><%= current_provider.address %></td>
+      <td><%= s.prefecture %></td>
     </tr>
     
     <tr>
