--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -27,12 +27,12 @@
    
 
 
- 
-   <table class="newpost">
+  <table class="newpost">
 
     <tr>
      <th> <p>  <%= f.label Note.human_attribute_name 'カテゴリー' %> <span class="form-label required">必須</span></p></th>
      <td>
+
 
 
 <select class="chosen-select form-control" name="note[category_id]" id="note_category_id" >
@@ -191,62 +191,62 @@
 <tr>
  <th> <p><%= f.label Note.human_attribute_name '写真' %><span class="form-label required">必須</span></p></th>
  <td>
-   <%= i.file_field :image1, class: "form-control image-field" %>
+   画像1(トップ画像) <%= i.file_field :image1, class: "form-control image-field" %>
  </td>
 </tr>
 <tr>
  <th> </th>
  <td>
-   <%= i.file_field :image2, class: "form-control image-field" %>
- </td>
-</tr>
-
-<tr>
- <th> </th>
- <td>
-   <%= i.file_field :image3, class: "form-control image-field" %>
+  画像2 <%= i.file_field :image2, class: "form-control image-field" %>
  </td>
 </tr>
 
 <tr>
  <th> </th>
  <td>
-   <%= i.file_field :image4, class: "form-control image-field" %>
+  画像3 <%= i.file_field :image3, class: "form-control image-field" %>
  </td>
 </tr>
 
 <tr>
  <th> </th>
  <td>
-   <%= i.file_field :image5, class: "form-control image-field" %>
+   画像4<%= i.file_field :image4, class: "form-control image-field" %>
  </td>
 </tr>
 
 <tr>
  <th> </th>
  <td>
-   <%= i.file_field :image6, class: "form-control image-field" %>
+ 画像5  <%= i.file_field :image5, class: "form-control image-field" %>
  </td>
 </tr>
 
 <tr>
  <th> </th>
  <td>
-   <%= i.file_field :image7, class: "form-control image-field" %>
+  画像6 <%= i.file_field :image6, class: "form-control image-field" %>
  </td>
 </tr>
 
 <tr>
  <th> </th>
  <td>
-   <%= i.file_field :image8, class: "form-control image-field" %>
+  画像7 <%= i.file_field :image7, class: "form-control image-field" %>
  </td>
 </tr>
 
 <tr>
  <th> </th>
  <td>
-   <%= i.file_field :image9, class: "form-control image-field" %>
+  画像8 <%= i.file_field :image8, class: "form-control image-field" %>
+ </td>
+</tr>
+
+<tr>
+ <th> </th>
+ <td>
+  画像9 <%= i.file_field :image9, class: "form-control image-field" %>
  </td>
 </tr>
 
