--- a/app/views/layouts/top_home.html
+++ b/app/views/layouts/top_home.html
@@ -2,7 +2,7 @@
 <head>
 
 <title>Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！</title>  
-<meta name="description" content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]" />
+<meta name="description" content="ハウスクリーニングや写真撮影、マッサージなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで予約するならSeekle。ユーザーの口コミ、満足度や料金で簡単・便利にサービス徹底比較！[最大10万円の安心保証つき]" >
 <meta name="keywords" content="業者,ポートフォリオ撮影,マッサージ,リフォーム"/>
 <meta property="og:title" content="Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！" />
 <meta property="og:description"
