--- a/app/views/layouts/company_layout.html.erb
+++ b/app/views/layouts/company_layout.html.erb
@@ -2,7 +2,7 @@
 <head>
 
 <title>Seekle（シークル）｜ 会社概要 </title>  
-<meta name="description" content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]">
+<meta name="description" content="サービスプラットフォーム「Seekle」 を運営する株式会社Seekleのコーポレートサイトです。">
 <meta name="keywords" content="業者,ポートフォリオ撮影,マッサージ,リフォーム">
 <meta property="og:title" content="Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！">
 <meta property="og:description"
@@ -61,16 +61,13 @@ $(function(){
    </ul> </header> <div class="main_content"> <%= yield %> </div>
 
 
-
 <footer class="footer"> <div class="row">
-      <div class="footer-bottom"> 
-  
-            <nav class="widget-menu"> 
+   <div class="footer-bottom"> 
+      <nav class="widget-menu"> 
               <li><a href="/home/term">利用規約</a></li>
               <li><a href="/home/policy">プライバシポリシー</a></li> 
               <li><a href="/home/signage">特定商取引に基づく表記</a></li> 
-        
-          </nav> 
+      </nav> 
     
     
     </div> </div></body>
