--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -73,7 +73,7 @@
 					<div class="col-sm-3 "> 
 						      <ul>
 									<h3 class="widget-title">Company</h3> 
-									<li><a href="/company/index">運営会社</a></li> 
+								<li><%= link_to "運営会社",company_index_path %></li> 
 								</ul> 
 						
 				
