--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -90,6 +90,26 @@
 
 
 
+
+
+   <div class="company-head">
+     <h1>Partner Company</h1>
+   </div>
+
+   <div class="company_service_mission">
+    
+
+    <%= link_to image_tag( "/images/beyondlogo.png",  { :class => "beyond_logo"}),"http://beyondjapan.com",:target=>["_blank"] %>
+
+ </div>
+
+ 
+
+
+
+
+
+
 <p id="page-top"><a href="#wrap">PAGE TOP</a></p>
 
 
