--- a/app/assets/stylesheets/company/index.css
+++ b/app/assets/stylesheets/company/index.css
@@ -89,3 +89,15 @@
     /* vertical-align: top; */
     white-space: nowrap;
 }
+
+
+
+
+
+.beyond_logo{
+
+margin-top: 40px;
+    width:40%;
+margin-left:30%;
+border-radius: 4px;
+}
