--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -195,6 +195,7 @@
  <th> <p><%= f.label Note.human_attribute_name '写真(9枚まで)' %><span class="form-label required">必須</span></p></th>
  <td>
    画像1(トップ画像)<%= i.file_field :image1, class: "form-control image-field" %>
+
  </td>
 </tr>
 <tr>
@@ -257,7 +258,8 @@
 </div>
 </table>
 </div>
-<%= f.submit '作成する', class: 'btn btn-default', data:{ disable_with: "作成中・・・"} %>
+
+<%= f.submit '作成する', class: 'btn btn-default', data:{ disable_with: "作成中・・・"} %>   <%= i.hidden_field :image9 %>
 
 <% end %>
 <% end %>
