--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -52,4 +52,10 @@
 
 
 </div>
+<div class="bootstrap">
+   <div class="list-number-2 clearfix">
+     <%= paginate(@notes) %>
+   </div>
+ </div>
 </div>
+
