--- a/app/views/notes/profile.html
+++ b/app/views/notes/profile.html
@@ -50,7 +50,9 @@
 
 <div class="store_explain">
   <h2>店舗紹介：</h2> 
+
 <%= simple_format(s.about) %> 
+
  
     <% if s.about.blank? %>
 <p>プロフィールがまだ記入されていません。</p>
@@ -63,13 +65,25 @@
 
   
   <ul>
-    <% @note.note_revisions.each do |note_revision| %>
+   <% @note.provider.notes.each do |note| %>
+    <% note.note_revisions.each do |note_revision| %>
+    <% note.note_images.each do |note_images| %>
 
     <li> 
+    <div class="provider_services_introduce">
 
-      <%= link_to note_revision.title, note_path(@note) %>
+      <%= link_to note_revision.title, note_path(@note),class: "provider_service_titles" %>
+    <% if note_images.image1.blank? %>
+    <%= image_tag 'Seekle_icon.png', :class => 'provider_service_introduce_image'%>
+    <% else %>
+      <%= image_tag note_images.image1_url ,class: "provider_service_introduce_image"%>
+    <% end %>
+
+      </div>
    </li>
-   <% end %>
+   <% end %> 
+      <% end %>  
+    <% end %>
 </ul>
 </div>
 </div>
