--- a/app/views/layouts/note_layout.html
+++ b/app/views/layouts/note_layout.html
@@ -3,12 +3,13 @@
  <% @note_revisions.each do |note_revision| %>
    <% @note.provider.store_infos.each do |s| %>
 <head>
-<title><%= note_revision.title %> - Seekle</title>  
+<title><%= note_revision.title %>|<%=  @note.provider.name %>の<%= @note.category.name %>- Seekle</title>  
 <meta name="description" content= "<%= note_revision.salespoint %> " />
 <meta name="keywords" content="<%= @note.category.name %>,<%=  @note.provider.name %>,業者,料金" />
 <meta property="og:title" content="<%= note_revision.title %> - Seekle" />
 <meta property="og:description"
      content="<%= note_revision.salespoint %> "  />
+
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
