--- a/app/views/layouts/top_home.html
+++ b/app/views/layouts/top_home.html
@@ -2,12 +2,13 @@
 <head>
 
 <title>Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！</title>  
-<meta name="description" content="ハウスクリーニングや写真撮影、マッサージなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで予約するならSeekle。ユーザーの口コミ、満足度や料金で簡単・便利にサービス徹底比較！[最大10万円の安心保証つき]" >
-<meta name="keywords" content="業者,ポートフォリオ撮影,シークル,マッサージ,リフォーム"/>
+<meta name="description" content="ハウスクリーニングや写真撮影、マッサージなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで予約するならSeekle（シークル）。ユーザーの口コミ、満足度や料金で簡単・便利にサービス徹底比較！[最大10万円の安心保証つき]" ><meta name="keywords" content="業者,ポートフォリオ撮影,シークル,マッサージ,リフォーム"/>
 <meta property="og:title" content="Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！" />
+<meta property="og:site_name" content="Seekle" />
+<meta property="og:url" content="https://seekle.jp" />
+<meta property="og:type" content="website">
 <meta property="og:description"
-     content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]" />
-
+     content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle（シークル）。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
 <%= favicon_link_tag('favicon.ico') %>
