--- a/app/assets/stylesheets/home/main/top.css.scss
+++ b/app/assets/stylesheets/home/main/top.css.scss
@@ -236,8 +236,8 @@ border-bottom: 2px solid #f5f5f5;
 }
 
 .explain-seekle-wrapper-content{
-width:73%;
-    margin-left: 13%;
+width:90%;
+    margin: 0 auto;
 
 }
 
@@ -248,7 +248,7 @@ width:73%;
   height:850px;
   color:gray;
 width:73%;
-    margin-left: 13.9%;
+    margin: 0 auto;
 
 text-align:center;
 font-size:14px
