--- a/app/views/layouts/note_layout.html
+++ b/app/views/layouts/note_layout.html
@@ -11,7 +11,6 @@
      content="<%= note_revision.salespoint %> "  />
 
 
-
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
 <%= favicon_link_tag('favicon.ico') %>
 </head>
@@ -52,7 +51,7 @@
 					<div class="col-sm-3"> 
 				
 						<h3 class="widget-title">Customers</h3> 
-									<li><a href="/home/guide">ご利用ガイド</a></li> 
+									<li><a href="/about">ご利用ガイド</a></li> 
 	
 					</div> 
 
