--- a/app/views/layouts/show_layout.html
+++ b/app/views/layouts/show_layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <head>
- <title> <%= yield :title %> - Seekle（シークル)</title> 
+ <title> <%=  Category.find_by(name: params[:category]).name %> - Seekle（シークル)</title> 
 <meta name="description" content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]" >
 
 
