--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -57,7 +57,7 @@
 					<div class="col-sm-3"> 
 				
 						<h3 class="widget-title">Customers</h3> 
-									<li><a href="/home/guide">ご利用ガイド</a></li> 
+									<li><a href="/about">シークルとは？</a></li> 
 	
 					</div> 
 
