--- a/app/assets/stylesheets/home/main/top.css.scss
+++ b/app/assets/stylesheets/home/main/top.css.scss
@@ -39,7 +39,7 @@ $app-container-width: $screen-desktop !default;
 
 .top-wrapper p{
  
-  margin-bottom:35px
+  margin-bottom:30px
 }
 
 
@@ -47,6 +47,79 @@ $app-container-width: $screen-desktop !default;
   max-width:940px;
       margin: 0 auto;
 }
+
+
+
+
+.howto_use_seekle{
+border-bottom: 2px solid #f5f5f5;
+  height:360px;
+  margin-top:70px;
+
+      color: gray;
+
+}
+.howto_use_seekle p{
+   line-height: 25px;
+   font-size:14px;
+}
+.howto_use_seekle h3{
+text-align:center;
+
+}
+
+.howto_use_seekle h2{
+text-align:center;
+color:  #2F4F4F;
+}
+
+
+.howto_explain{
+margin-top:30px;
+}
+
+.how-icon1{
+  float:left;
+  width:28%;
+}
+
+.how-icon2{
+  float:left;
+  width:28%;
+  margin-left:75px;
+
+}
+
+.how-icon3{
+  float:left;
+  width:28%;
+ margin-left:75px;
+}
+
+
+.lens{
+
+  margin-left:40px;
+width:52%;
+}
+
+
+.machine{
+  margin-left:20px;
+    width:90%;
+
+}
+
+
+.glass{
+
+  margin-left:20px;
+    width:86%;
+
+}
+
+
+
 
 .about-seekle-wrapper{
   margin-top: 4%;
@@ -137,6 +210,27 @@ margin-left: 13px;
 }
 
 
+
+
+.popular_service1:hover{
+
+  opacity:0.8;
+}
+
+
+.popular_service2:hover{
+
+  opacity:0.8;
+}
+
+.provider_service_image:hover{
+
+  opacity:0.8;
+}
+
+
+
+
 .message-wrapper{
   height:290px;
 
@@ -169,6 +263,11 @@ margin-left: 13px;
 
 @media only screen and  ( max-width:$screen-mobile-max ){
 
+
+.howto_use_seekle{
+  display:none;
+}
+
   .top-wrapper{
     padding: 50px 0 60px 0px;
   }
@@ -177,7 +276,7 @@ margin-left: 13px;
    width:80%;
    margin-left: 9%;
    text-shadow: 2px 2px 1px black;
-   font-size: 30px;
+   font-size: 26px;
    line-height: 50px;
    padding-left: 0%;
     padding-top:16%;
@@ -188,7 +287,8 @@ margin-left: 13px;
   .top-wrapper p{
    width:70%;
    margin-left: 14%;
-   line-height: 10px;
+   margin-bottom:20px;
+   line-height: 20px;
    }
 
 
@@ -321,6 +421,11 @@ width:100%;
 text-align:center;
 
 }
+
+
+
+
+
 
 .reasons{
   float:left;
