--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -4,12 +4,12 @@
 
 <div class="top-wrapper">
  <div class="-image">
-  <a img="https://statbackgroundic.pexels.com/photos/7075/people-office-group-team.jpg">
+ 
   </a>
 </div>
 
 <h1>信頼できるサービスをオンラインで</br>すぐに簡単に予約</h1>
-<p>登録費・利用料すべて無料！</p>
+<p>Seekleでは、ハウスクリーニング、写真撮影、習い事などの各種サービスを依頼することができます。</p>
 
 
 </div>
@@ -47,6 +47,39 @@
 
 
 <div class="main-container">
+
+<div class="howto_use_seekle">
+<h3>シークルはあなたの求めるサービスを安心して依頼できるサイトです</h3>
+
+<div class="howto_explain">
+<div class="how-icon1">
+
+  <%=image_tag( "/images/lens.jpg", { :class => "lens"}) %>
+    <h2>見つける</h2>
+    <p>価格、口コミ、提供者の情報からほんとに安心できるサービス選びを提供します</p>
+</div>
+
+
+<div class="how-icon2">
+  <%=image_tag( "/images/machine.jpg", { :class => "machine"}) %>
+     <h2>予約する</h2>
+      <p>困ったこと・質問があればメッセージでいつでもお問い合わせができます</p>
+</div>
+
+
+<div class="how-icon3">
+   <%=image_tag( "/images/glass.jpg", { :class => "glass"}) %>
+       <h2>サービスを受ける</h2>
+      <p>ハウスクリーニングから、写真撮影、マッサージまでどんどん展開していきます</p>
+</div>
+</div>
+
+</div>
+
+
+
+
+ 
 
   <div class="explain-seekle-wrapper">
     <div class="explain-seekle-wrapper-content">
