--- a/app/views/layouts/top_home.html
+++ b/app/views/layouts/top_home.html
@@ -75,8 +75,9 @@
 
 					<div class="col-sm-3 "> 
 						      <ul>
-									<h3 class="widget-title">Company</h3> 
-							<li><%= link_to "運営会社",company_index_path %></li> 
+								<h3 class="widget-title">Company</h3> 
+									<li><%= link_to "運営会社",company_index_path %></li> 
+									<li><%= link_to "Seekleマガジン","http://articles.seekle.jp",:target=>["_blank"] %></li>
 								</ul> 
 						
 				
