--- a/app/views/layouts/note_layout.html
+++ b/app/views/layouts/note_layout.html
@@ -69,7 +69,8 @@
 					<div class="col-sm-3 "> 
 						      <ul>
 									<h3 class="widget-title">Company</h3> 
-									<li><a href="/company/index">運営会社</a></li> 
+									<li><%= link_to "運営会社",company_index_path %></li> 
+									<li><%= link_to "Seekleマガジン","http://articles.seekle.jp",:target=>["_blank"] %></li>
 								</ul> 
 						
 				
