--- a/app/assets/stylesheets/home/main/top.css.scss
+++ b/app/assets/stylesheets/home/main/top.css.scss
@@ -244,7 +244,7 @@ margin-left: 13px;
 
 
 
-@media only screen and  ( max-width:$screen-mobile-max ){
+@media only screen and  ( max-width:$screen-tablet-max){
 
 
 .howto_use_seekle{
@@ -541,3 +541,15 @@ margin-left: 16px;
 
 
 }
+
+
+@media (max-width:$screen-phablet) {
+.web-menu-var{
+  display:none;
+}
+
+
+}
+
+
+
