--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
-
-
+<% provide :title, "マイページ"  %>
 <%= render 'users/header' %>
 <%= render 'home/header/dashboardhead' %>
 
-
 <div class="main-container">
+
 
 <div class="mypage-all_wrapper">
 
