--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -24,7 +24,9 @@
 .signage ul li{font-size:15px;margin-top:15px}
 
 /* 404, 505のエラーページ */
-.error-wrapper{height:300px;} .error-wrapper h1{font-weight: normal; margin-top:80px; margin-left: 130px;}
+.error-wrapper{height:300px;} 
+.error-wrapper h1{font-weight: normal; margin-top:80px; }
+
 
 
 #error_explanation{
