--- a/app/assets/stylesheets/notes/serach.css
+++ b/app/assets/stylesheets/notes/serach.css
@@ -63,6 +63,11 @@ clear:both;
  	padding-top:0px;
  	}
 
+.provider_service_image:hover{
+	opacity:0.8;
+}
+
+
  .provider_job{
  	height:230px;
 
@@ -82,13 +87,13 @@ clear:both;
 }
 
 .provider_job h3{
-	margin-top:30px;
-	float:left
+margin-bottom: 900px;
+	float:right;
 }
 
 .provider_job p{
 	font-size:13px;
-	line-height:20px;
+	line-height:10px;
 	text-align:center
 }
 
@@ -131,17 +136,43 @@ margin-left: 30%;
 }
 
 .show_providers{
-margin-top: 5%;
+	margin-top: 5%;
 	margin-bottom:90px;
 
 }
 
 .service-price h3{
 	font-weight:1px;
-	float:right;
 	color:#B22222;
+}
+
+
+.check_service_btn{
+	color:white;
+	float:right;
+	display: block;
+	font-size: 20px;
+	font-weight: 700;
+	padding: 9px;
+	border: 1px solid #333;
+	color: #fff;
+	border-radius: 3px;
+	background-color: #F47503;;
+	box-shadow: 2px 2px #555;
+	width: 26%;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	margin-bottom: 24px;
 
 }
+
+.check_service_btn:active{
+ 	  box-shadow: none;
+ 	  margin-top: 8px;
+}
+
 .service-price span{
 	font-size: 70%;
 	padding-left: 4px;
@@ -162,12 +193,12 @@ margin-top: 5%;
  	display:none;
  }
 .published_service_wrapper{
-	width:100%;
-	margin-left:0%;
+	width:97%;
+	margin:0 auto;
 }
 
 .title h2{
-	font-size: 16px;
+	font-size: 14px;
 }
 
   .services_right_wrapper{
@@ -215,6 +246,27 @@ clear:both;
 
 }
 
+
+.check_service_btn{
+	color:white;
+	float:right;
+	display: block;
+	font-size: 17px;
+	font-weight: 700;
+	padding: 9px;
+	border: 1px solid #333;
+	color: #fff;
+	border-radius: 3px;
+	background-color: #F47503;;
+	box-shadow: 2px 2px #555;
+	width: 36%;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	margin-bottom: 9px;
+
+}
 
 
 
