--- a/app/assets/stylesheets/notes/serach.css
+++ b/app/assets/stylesheets/notes/serach.css
@@ -87,7 +87,7 @@ clear:both;
 }
 
 .provider_job h3{
-margin-bottom: 900px;
+
 	float:right;
 }
 
@@ -153,11 +153,11 @@ margin-left: 30%;
 	display: block;
 	font-size: 20px;
 	font-weight: 700;
-	padding: 9px;
+	padding: 5px;
 	border: 1px solid #333;
 	color: #fff;
 	border-radius: 3px;
-	background-color: #F47503;;
+	background-color: 		#4169E1;
 	box-shadow: 2px 2px #555;
 	width: 26%;
 	text-align: center;
@@ -253,18 +253,18 @@ clear:both;
 	display: block;
 	font-size: 17px;
 	font-weight: 700;
-	padding: 9px;
+	padding: 5px;
 	border: 1px solid #333;
 	color: #fff;
 	border-radius: 3px;
-	background-color: #F47503;;
+	background-color: 		#4169E1;
 	box-shadow: 2px 2px #555;
 	width: 36%;
 	text-align: center;
 	position: absolute;
 	right: 0;
 	bottom: 0;
-	margin-bottom: 9px;
+	margin-bottom: 20px;
 
 }
 
