--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, "ユーザー設定"  %>
+
 <div class="up-var">
   <div class="upper-menu">
     <div class="wrapper" >
@@ -94,6 +96,7 @@
 </div>
 
 </div>
+
 
 
 
