--- a/app/views/providers/registrations/new.html.erb
+++ b/app/views/providers/registrations/new.html.erb
@@ -1,5 +1,8 @@
+<% provide :title, "サービス提供者登録" %>
 <%= render 'providers/header' %>
+
  <div class="main-container">
+
 <div class="providers_signup">
 
 
@@ -7,6 +10,20 @@
 <h2>Seekleに無料でサービスを掲載する</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  
+
+ <%= f.fields_for :store_infos do |s| %>
+ <%= s.hidden_field :postalcode %>
+ <%= s.hidden_field :prefecture %>
+ <%= s.hidden_field :city %>
+ <%= s.hidden_field :address%>
+ <%= s.hidden_field :building %>
+ <%= s.hidden_field :provider_id %>
+ <%= s.hidden_field :hours %>
+ <%= s.hidden_field :holiday %>
+ <%= s.hidden_field :payment%>
+ <%= s.hidden_field :about %>
+
 
    <% if @provider.errors.any? %>
     <div id="error_explanation">
@@ -19,7 +36,7 @@
   <% end %>
 
 <div class="field2">
-    <h3>店舗名</h3>
+    <h3>店舗名 (個人で活動されている方は個人名でも可)</h3>
     <%= f.text_field :name, autofocus: true %>
   </div>
 
@@ -50,24 +67,8 @@
 
   <div class="field2">
     <h3>パスワード（確認）</h3>
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+   <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
-
-  
-
- <%= f.fields_for :store_infos do |s| %>
-
-<%= s.hidden_field :postalcode %>
-  <%= s.hidden_field :prefecture %>
-   <%= s.hidden_field :city %>
-    <%= s.hidden_field :address%>
-        <%= s.hidden_field :building %>
- <%= s.hidden_field :provider_id %>
-  <%= s.hidden_field :hours %>
-   <%= s.hidden_field :holiday %>
-    <%= s.hidden_field :payment%>
- <%= s.hidden_field :about %>
 
 
 
