--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -18,7 +18,7 @@
 
    <div class="company_service_mission">
     <h2>お客さま</h2>
-    <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、満足のいくサービスを提供します。
+    <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、安心できるサービスを提供します。
      一目で情報がわかるので、いろんなところへ電話して見積もる手間もなく、近くのサービスを簡単に依頼することが可能になります。<br>
      <%= link_to  'アカウントを登録する',"/users/sign_up"%>
    </p>
@@ -36,9 +36,6 @@
 
 
 
-
-
-
  <div class="about-company">
   <div id="2">
    <div class="company-head">
@@ -49,7 +46,7 @@
      <tbody>
      <tr>
       <td>会社名</td>
-      <td>株式会社 Seekle</td>
+      <td>株式会社Seekle</td>
     </tr>
 
      <tr>
