--- a/app/views/notes/housing.html.erb
+++ b/app/views/notes/housing.html.erb
@@ -1,14 +1,10 @@
 
+
 <%= render 'home/header/dashboardhead' %>
-<div class="genre">
-  <div class="bootstrap1">
-    <ol class="breadcrumb">
 
 
+<% breadcrumb :housing_notes%>
 
-    </ol>
-  </div>
-</div>
 
 <div class="main-container">
 
@@ -34,7 +30,6 @@
 
  </div>
 </div>
-
 
 
 <div class="services_right_wrapper">
