--- a/app/views/notes/lesson.html.erb
+++ b/app/views/notes/lesson.html.erb
@@ -1,11 +1,6 @@
 <%= render 'home/header/dashboardhead' %>
-<div class="genre">
-  <div class="bootstrap1">
-    <ol class="breadcrumb">
 
-    </ol>
-  </div>
-</div>
+<% breadcrumb :lesson_notes%>
 
 <div class="main-container">
 
