--- a/app/views/notes/health.html.erb
+++ b/app/views/notes/health.html.erb
@@ -1,12 +1,6 @@
 <%= render 'home/header/dashboardhead' %>
-<div class="genre">
-  <div class="bootstrap1">
-    <ol class="breadcrumb">
 
-    </ol>
-  </div>
-</div>
-
+<% breadcrumb :health_notes%>
 <div class="main-container">
 
 <div class="published_service_wrapper">
