--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -10,6 +10,8 @@
 .message{background-color:#6495ED;box-shadow:#4682B4 0 3px;padding:15px 40px}
 .fa-fw{font-size:18px;padding-right:10px}
 
+
+
 /*利用規約、ポリシー、特定商取引 のcss*/
 .policy-wrapper{margin-top:50px;margin-left:300px;border-radius:5px;background-color:#FFF}
 .policy-menu-heading,.signage-menu-heading{width:270px;float:left;background-color:#F5F5F5}
@@ -23,10 +25,31 @@
 .policy-contents ul li{list-style:none}
 .signage ul li{font-size:15px;margin-top:15px}
 
+
+.breadcrumb_wrapper{
+	margin-top: 10px;
+	border-top: 3px solid #f5f5f5;
+	border-bottom: 1px solid #f5f5f5;
+	padding:7px 0 ;
+}
+
+.breadcrumbs{
+
+max-width:940px;
+margin: 0 auto;
+}
+
+.breadcrumbs a{
+	font-size: 13px;
+}
+
+.current{
+	font-size: 13px;
+}
+
 /* 404, 505のエラーページ */
 .error-wrapper{height:300px;} 
 .error-wrapper h1{font-weight: normal; margin-top:80px; }
-
 
 
 #error_explanation{
