--- a/app/views/notes/event.html.erb
+++ b/app/views/notes/event.html.erb
@@ -52,19 +52,27 @@
      <% end %>
 
 
+
     <div class="service_catchcopy_top"> 
      <p><%= note_revision.catchcopy.truncate(37, omission: '...' )%></p>
     </div>
 
      <div class="store_name_left">
-      <p><%= link_to note.provider.name,profile_note_path(note),:class => "link_provider" %></p>
+     <p><%= link_to note.provider.name,profile_note_path(note),:class => "link_provider" %></p>
      </div>
-       <div class="service-price"><h3> <%= note_revision.price %>円<span>(税込)</span>〜</h3> </div>
-       <% end %>
+    
      </div>
-   </div>
-   <% end %>
 
+       <div class="service-price"><h3> <%= note_revision.price %>円<span>(税込)</span>〜</h3> </div>
+
+       <% end %>
+
+         <%= link_to "詳細を見る", note_path(note), class: "btn check_service_btn" %>
+
+
+   </div>
+
+   <% end %>
 
 
 
