--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -76,7 +76,7 @@
 						       <ul>
 									<h3 class="widget-title">Company</h3> 
 									<li><%= link_to "運営会社",company_index_path %></li> 
-									<li><%= link_to "Seekleマガジン","http://articles.seekle.jp",:target=>["_blank"] %></li>
+									<li><%= link_to "Seekleメディア","http://articles.seekle.jp",:target=>["_blank"] %></li>
 								</ul> 
 						
 				
