--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -4,7 +4,9 @@
 
 
   <div class="company_explanation">
-  <h1>株式会社Seekle</h1>
+   <div class="box">
+    <h1>株式会社Seekle</h1>
+   </div>
   </div>
 
 
