--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -8,9 +8,7 @@
     <h1>株式会社Seekle</h1>
    </div>
   </div>
-
-
-
+<div class="main-container">
 
   <div id="1">
 
@@ -18,21 +16,21 @@
      <h2>About Our Service</h2>
    </div>
 
+   <h3>サービスプラットフォーム事業  <span class="big_seekle"><%= link_to "Seekle",root_path %></span></h3>
+
    <div class="company_service_mission">
-    <h2>お客さま</h2>
-    <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、安心できるサービスを提供します。
-     一目で情報がわかるので、いろんなところへ電話して見積もる手間もなく、近くのサービスを簡単に依頼することが可能になります。<br>
+
+    <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、安心できるサービスを提供します。<br><br>
+     また、サービス提供者の方の集客、口コミ集めなど、Seekleを通してサポートを努め、ホームページを作る必要なく広告塔となり、ビジネスを始めやすい環境を創り、日本のビジネスインフラを整備していきます。
      <%= link_to  'アカウントを登録する',"/users/sign_up"%>
    </p>
  </div>
 
- <div class="company_service_mission">
-  <h2>サービス提供者の方々</h2>
-  <p>独立した方、個人事業者の方をメインに主に集客、口コミ集めなど、Seekleを通してサポートを努め、ホームページを作る必要なく広告塔となり、ビジネスを始めやすい環境を創り、日本のビジネスインフラを整備していきます。<br>
-サービスをSeekleに掲載していただける方は
-<%= link_to  'こちらのページ',"/home/pro"%>をご覧ください。
-</p>
-  </div>
+   <h3>キュレーションメディア事業  <span class="big_seekle"><%= link_to "Seekle ジャーナル","http://articles.seekle.jp/" %></span></h3>
+      <div class="company_service_mission">
+<p>『Seekle メディア』は、“安心できる地域のサービス情報サイト”をテーマに、地域で活躍する様々なカテゴリの店舗、教室、人物、そして最新のトレンドサービスやトピックスから生活に活かせるコト学び、日々のくらしに関わる魅力的なサービスを発見できるキュレーションメディアです。</p>
+</div>
+
 
 </div>
 
@@ -114,7 +112,7 @@
 
  </div>
 
-
+</div>
 <script>
 $(function() {
     var topBtn = $('#page-top');    
