--- a/app/assets/stylesheets/providers/profile.css
+++ b/app/assets/stylesheets/providers/profile.css
@@ -82,6 +82,60 @@ padding-bottom: 20px;
 
 
 
+/* ipad iphone4と5のレスポンシブデザイン */
+@media screen and (min-width: 320px) and (max-width: 374px){
+
+.provider_services_introduce{
+	width:100%;
+	margin-left:0%;
+}
+
+
+.listing_wrapper h1{
+
+margin-bottom: 5px;
+ 
+}
+.provider_service_titles{
+	margin-left: 0px;
+	font-size: 15px;
+
+	clear:both;
+
+}
+
+
+
+.provider_service_introduce_image{
+	height:90px;
+
+	width:130px;
+	
+}
+
+
+.listing h4{
+	padding-left: 5px;
+	font-size: 14px;
+}
+
+.service_image{
+   
+   width:42%;
+   height:120px;
+}
+
+.listing_wrapper .bootstrap{
+	margin-top: 35px;
+	float:right;
+}
+.listing_wrapper .bootstrap .btn{
+	font-size: 10px;
+}
+
+
+}
+
 /* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
 @media screen and (max-width: 414px) {
 
@@ -102,6 +156,14 @@ padding-bottom: 20px;
 	float:left;
 	border-radius:2%;
 	margin-bottom: 9%;
+}
+
+
+.provider_service_introduce_image{
+	height:90px;
+
+	width:130px;
+	
 }
 
 
