--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -16,8 +16,6 @@
 </head>
 
 
-
-
 <script src='https://cdn.slaask.com/chat.js'></script>
 <script>
 	_slaask.init('e82bd97e2f19e5c3820785f34a397d1c');
@@ -76,7 +74,7 @@
 						       <ul>
 									<h3 class="widget-title">Company</h3> 
 									<li><%= link_to "運営会社",company_index_path %></li> 
-									<li><%= link_to "Seekleメディア","http://articles.seekle.jp",:target=>["_blank"] %></li>
+									<li><%= link_to "Seekleジャーナル","http://articles.seekle.jp",:target=>["_blank"] %></li>
 								</ul> 
 						
 				
