--- a/app/views/category/event.html.erb
+++ b/app/views/category/event.html.erb
@@ -1,4 +1,5 @@
-      <%= render 'category/header' %>
+ <% provide :title, "イベント"  %>    
+<%= render 'category/header' %>
 
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
