--- a/app/views/category/lesson.html.erb
+++ b/app/views/category/lesson.html.erb
@@ -1,4 +1,6 @@
-     <%= render 'category/header' %>
+   
+<% provide :title, "習い事"  %>   
+<%= render 'category/header' %>
      
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
