--- a/app/views/category/health.html.erb
+++ b/app/views/category/health.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, "健康"  %>   
 <%= render 'category/header' %>
 <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
